--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "type": "module",
-  "name": "coderhouse-37",
+  "name": "coderhouse-39",
   "version": "1.0.0",
   "description": "",
   "main": "src/main.js",
@@ -35,7 +35,9 @@
     "passport-local": "^1.0.0",
     "socket.io": "^4.6.1",
     "util": "^0.12.5",
-    "winston": "^3.9.0"
+    "winston": "^3.9.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.17"
